--- a/src/templates/index_pred.html
+++ b/src/templates/index_pred.html
@@ -7,49 +7,51 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="{{ url_for('static', filename='css/main.css') }}">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Musc and Artists</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- Custom styles for this template -->
-    <link href="../static/css/jumbotron.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
-  <body>
+  <body >
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div id="navbar" class="navbar-collapse collapse">
+      <div class="container" style="padding-top: 20px">
           <form class="navbar-form navbar-right" action="/predict" method='POST'>
             <div class="form-group">
-              <input type="text" placeholder="Type some lyrics" class="form-control", name="lyric">
+              <textarea placeholder="Type some lyrics" class="form-control" rows="5" name="lyric"></textarea>
             </div>
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
-        </div><!--/.navbar-collapse -->
       </div>
-    </nav>
 
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
+        <div class="col-md-12">
+          <h2 class="artists">Artists who would say: {{data[1]}}</h2>
+        </div>
         <div class="col-md-4">
-          <h2>Artists who would say: {{data[1]}}</h2>
-          <p>{{data[0]}}</p>
+          <table class="table ">
+            <thead>
+              <tr>
+                <th></th>
+                <th scope="col">Artist Name</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% for artist in data[0] %}
+                <tr>
+                  <td>{{loop.index}}</td>
+                  <td>{{artist}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+          </table>
         </div>
       </div>
       <hr>
