--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,1 +1,17 @@
-class
+body {
+	background: black; 
+	color: yellow;
+}
+
+textarea {
+	background-color: black !important;
+	color: white !important	;
+}
+
+.table td, .table th {
+	border-top: none;
+}
+
+.artists {
+	padding-top: 40px;
+}
